# pycortex

./: .gitignore  =2  AGENTS.md  README.md  pyproject.toml
.agents/: scheduled_tasks.json
.github/workflows/: ci.yml  merge-release.yml  publish-one.yml  release.yml  reserve-names.yml
.hoocode/: MIGRATION_NOTES.md
.hoocode/dispatch/dispatch-1784464453767-ji3sut/: budget.json  dispatch-log.json  output.json  session.jsonl
.hoocode/dispatch/dispatch-1784464453775-bqgpu6/: budget.json  dispatch-log.json  output.json  session.jsonl
.hoocode/dispatch/dispatch-1784470776581-t9kwv4/: budget.json  dispatch-log.json  output.json  session.jsonl
.hoocode/dispatch/dispatch-1784473006971-lul0ao/: budget.json  dispatch-log.json  output.json  session.jsonl
.hoocode/dispatch/dispatch-1784898839593-3kh6ec/: budget.json  dispatch-log.json  output.json  session.jsonl
.hoocode/skills/: migrate-next.md  port-ts-module.md  port-ts-tests.md  release.md  sync-from-upstream.md
docs/: 00-migration-overview.md  01-source-analysis.md  02-target-architecture.md  03-release-pipeline.md  04-migration-plan.md  05-skills-and-commands.md
scripts/: bump_versions.py  convert_image_models.py  convert_models.py  migrate_next.py  publish_packages.py  release.py
