[project]
name = "pycortex-workspace"
version = "0.0.0"
description = "Workspace root for pycortex (not published)"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*/*"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "tomli-w>=1.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["packages"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"
